force-app/main/default/objects/Object_2__c/Object_2__c.object-meta.xml
<CustomObject>
    <label>Object 2</label>
    <nameField>
        <displayFormat>Obj2-{00000}</displayFormat>
        <label>Object 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>