force-app/main/default/objects/Object_2__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>