force-app/main/default/objects/Object_2__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>Field3#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>