force-app/main/default/objects/Object_2__c/fields/Field4__c.field-meta.xml
<CustomField>
    <fullName>Field4__c</fullName>
    <label>Field4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>