force-app/main/default/objects/Object_2__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <label>Field-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value-1.1</fullName>
            </value>
            <value>
                <fullName>Value-1.2</fullName>
            </value>
            <value>
                <fullName>Value-1.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>