force-app/main/default/objects/Object_2__c/fields/Object_1__c.field-meta.xml
<CustomField>
    <fullName>Object_1__c</fullName>
    <label>Object 1</label>
    <referenceTo>Object_1__c</referenceTo>
    <relationshipLabel>Objects 2</relationshipLabel>
    <relationshipName>Object1Object2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>