force-app/main/default/objects/Object_2__c/recordTypes/Record_Type_for_Profile_1.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_for_Profile_1</fullName>
    <active>true</active>
    <label>Record Type for Profile 1</label>
</RecordType>